--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,10 @@ body{
     background-color: black;
 }
 
+.wrapper{
+    flex-wrap: wrap;
+}
+
 .border{
     border: 2px dashed white;
 }
@@ -19,9 +23,6 @@ body{
 .flex{
     display: flex;
 }
-
-
-
 /*UTILS*/
 
 .container{
@@ -29,16 +30,40 @@ body{
     margin: 0 auto;
 }
 
-.full-page{
+.semi-full-page{
     height: 99vh;
+}
+
+.bg-red{
     background-color: red;
 }
 
-/*MAIN*/
+.bg-green{
+    background-color: green;
+}
 
+.bg-yellow{
+    background-color: yellow;
+}
+
+
+h1{
+    font-size: 50px;
+    text-align: center;
+}
+
+.c-yellow{
+    color: yellow;
+}
+
+.c-green{
+    color: green;
+}
+
+/*MAIN*/
 .col{
     width: 100%;
-    height: auto;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
@@ -50,4 +75,10 @@ body{
 .card-image{
     width: 100%;
     height: auto;
+}
+
+.blue-shoes{
+width: 100%;
+height: auto;
+display: block;
 }
