--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+    overflow: hidden;
+}
 /*GENERICS*/
 
 body{
@@ -16,15 +20,10 @@ body{
     flex-wrap: wrap;
 }
 
-.border{
-    border: 2px dashed white;
-}
-
 .flex{
     display: flex;
 }
 /*UTILS*/
-
 .container{
     max-width: 1400px;
     margin: 0 auto;
@@ -45,7 +44,6 @@ body{
 .bg-yellow{
     background-color: yellow;
 }
-
 
 h1{
     font-size: 50px;
@@ -81,4 +79,37 @@ h1{
 width: 100%;
 height: auto;
 display: block;
+}
+
+/*SIDE MENU*/
+ul{
+    list-style: none;
+    display: flex;
+    gap: 30px;
+    padding-right: 30px;
+    
+}
+
+.side-menu a{
+    font-size: 20px;
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 50%;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+.side-menu{
+position: fixed;
+top: 40px;
+right: 260px;
+}
+
+.side-menu a:active{
+    scale: 0.9;
+}
+
+.side-menu a:hover{
+    scale: 1.6;
 }
