--- a/CSS/style.css
+++ b/CSS/style.css
@@ -95,9 +95,13 @@ ul{
     background-color: white;
     color: black;
     text-decoration: none;
-    padding: 10px 20px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    text-align: center;
+    line-height: 40px;
 }
 
 .side-menu{
@@ -110,6 +114,3 @@ right: 30px;
    scale: 1.2;
 }
 
-.side-menu a :active{
-    scale: 0.9;
-}
